test without config

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <h1>Featured Blog</h1>
             <hr>
             
-            <a href="#" class="core-featured-link">
+            <a href="https://muhammadabidd.github.io/blog/content/01/" class="core-featured-link">
                 <div class="core-featured-blog core">
                     <div class="inner-core-featured-blog inner-core">
                         <div class="date-featured-blog date">
