--- a/content/01/index.html
+++ b/content/01/index.html
@@ -38,8 +38,8 @@
                 <li><a class="heading-list" href="#">About</a></li>
             </ul>
             <div class="social-media-header">
-                <!-- <a href="#" class="social-media-header"><img class = "social-media-image-link" src='../../img/github.svg' alt=""></a> -->
-                <a href="https://www.linkedin.com/in/muhammmadabidd/" class="social-media-header"><img class = "social-media-image-link" src='../../img/linkedin.svg' alt=""></a>
+                <!-- <a href="#" target="_blank" class="social-media-header"><img class = "social-media-image-link" src='../../img/github.svg' alt=""></a> -->
+                <a href="https://www.linkedin.com/in/muhammmadabidd/" target="_blank" class="social-media-header"><img class = "social-media-image-link" src='../../img/linkedin.svg' alt=""></a>
             </div>
         </nav>
 
@@ -94,8 +94,8 @@
             <p class="paragraph">Ask CDCR San Quintin State Prison 2008. We installed Purex dispensers throughout the prison to combat diseases…and it was a Roaring Success (as in Roaring Drunk) I mean we had Long lines of prisoners fist fighting to use them.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium molestias dolor blanditiis doloribus alias facere eligendi ex nostrum temporibus perspiciatis? Fugiat dolor corporis, sequi aspernatur beatae porro odit cupiditate doloribus.</p>
 
             <div class="social-media-content-link">
-                <a href="#" class="social-media-link"><img class="social-media-image-link" src="../../img/medium.svg" alt=""></a>
-                <!-- <a href="#" class="social-media-link"><img class="social-media-image-link" src="../../img/content/twitter-hitam.svg" alt=""></a> -->
+                <a href="#" target="_blank" class="social-media-link"><img class="social-media-image-link" src="../../img/medium.svg" alt=""></a>
+                <!-- <a href="#" target="_blank" class="social-media-link"><img class="social-media-image-link" src="../../img/content/twitter-hitam.svg" alt=""></a> -->
             </div>
                 
                 
