about page done

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <li><a class="heading-list" href="#">Book</a></li>
                 <li><a class="heading-list" href="#">Data</a></li>
                 -->
-                <li><a class="heading-list" href="#">About</a></li>
+                <li><a class="heading-list" href="https://muhammadabidd.github.io/blog/about">About</a></li>
             </ul>
             <div class="social-media-header">
                 <!-- <a href="muhammadabidd.medium.com" target="_blank" class="social-media-header"><img class = "social-media-image-link" src='img/medium.svg' alt=""></a> -->
