--- a/content/01/index.html
+++ b/content/01/index.html
@@ -35,7 +35,7 @@
                 <li><a class="heading-list" href="https://muhammadabidd.github.io/blog/">Blog</a></li>
                 <!-- <li><a class="heading-list" href="#">Book</a></li>
                 <li><a class="heading-list" href="#">Data</a></li> -->
-                <li><a class="heading-list" href="#">About</a></li>
+                <li><a class="heading-list" href="https://muhammadabidd.github.io/blog/about">About</a></li>
             </ul>
             <div class="social-media-header">
                 <!-- <a href="#" target="_blank" class="social-media-header"><img class = "social-media-image-link" src='../../img/github.svg' alt=""></a> -->
