--- a/about/index.html
+++ b/about/index.html
@@ -88,7 +88,7 @@
         <div class="social-media-footer social-media">
             <a href="https://api.whatsapp.com/send/?phone=6281273568772&text&type=phone_number&app_absent=0" target="_blank" class="image-footer"><img class="image-footer image-footer-01" src="../../img/email-footer.svg" alt=""></a>
             <a href="https://github.com/muhammadabidd" target="_blank" class="image-footer"><img class="image-footer image-footer-02" src="../../img/github-footer.svg" alt=""></a>
-            <a href="muhammadabidd.medium.com" target="_blank" class="image-footer"><img class="image-footer image-footer-03" src="../../img/medium-footer.svg" alt=""></a>
+            <a href="https://muhammadabidd.medium.com" target="_blank" class="image-footer"><img class="image-footer image-footer-03" src="../../img/medium-footer.svg" alt=""></a>
             <a href="https://linkedin.com/in/muhammmadabidd/" target="_blank" class="image-footer"><img class="image-footer image-footer-04" src="../../img/linkedin-footer.svg" alt=""></a>
             <a href="https://twitter.com/muhammmadabidd" target="_blank" class="image-footer"><img class="image-footer image-footer-05" src="../../img/twitter-footer.svg" alt=""></a>
         </div>
