--- a/content/01/index.html
+++ b/content/01/index.html
@@ -35,7 +35,7 @@
                 <li><a class="heading-list" href="https://muhammadabidd.github.io/blog/">Blog</a></li>
                 <!-- <li><a class="heading-list" href="#">Book</a></li>
                 <li><a class="heading-list" href="#">Data</a></li> -->
-                <li><a class="heading-list" href="https://muhammadabidd.github.io/blog/about">About</a></li>
+                <li><a class="heading-list" href="about">About</a></li>
             </ul>
             <div class="social-media-header">
                 <!-- <a href="#" target="_blank" class="social-media-header"><img class = "social-media-image-link" src='../../img/github.svg' alt=""></a> -->
@@ -118,7 +118,7 @@
         <div class="social-media-footer social-media">
             <a href="https://api.whatsapp.com/send/?phone=6281273568772&text&type=phone_number&app_absent=0" target="_blank" class="image-footer"><img class="image-footer image-footer-01" src="../../img/email-footer.svg" alt=""></a>
             <a href="https://github.com/muhammadabidd" target="_blank" class="image-footer"><img class="image-footer image-footer-02" src="../../img/github-footer.svg" alt=""></a>
-            <a href="muhammadabidd.medium.com" target="_blank" class="image-footer"><img class="image-footer image-footer-03" src="../../img/medium-footer.svg" alt=""></a>
+            <a href="https://muhammadabidd.medium.com" target="_blank" class="image-footer"><img class="image-footer image-footer-03" src="../../img/medium-footer.svg" alt=""></a>
             <a href="https://linkedin.com/in/muhammmadabidd/" target="_blank" class="image-footer"><img class="image-footer image-footer-04" src="../../img/linkedin-footer.svg" alt=""></a>
             <a href="https://twitter.com/muhammmadabidd" target="_blank" class="image-footer"><img class="image-footer image-footer-05" src="../../img/twitter-footer.svg" alt=""></a>
         </div>
