--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,8 @@
     <link rel="stylesheet" href="../../style/latest-blog.css">
     <link rel="stylesheet" href="../../style/footer.css">
     <link rel="stylesheet" href="../../style/content.css">
-    <link rel="stylesheet" href="mainstyle.css">
+    <link rel="stylesheet" href="../../style/about.css">
+    
 
 
     <style>
