--- a/about/index.html
+++ b/about/index.html
@@ -8,13 +8,13 @@
 
     <link rel="icon" href="../../img/logo.png" type="">
 
-    <link rel="stylesheet" href="../../style/header.css">
-    <link rel="stylesheet" href="../../style/mainstyle.css">
-    <link rel="stylesheet" href="../../style/Featured-blog.css">
-    <link rel="stylesheet" href="../../style/latest-blog.css">
-    <link rel="stylesheet" href="../../style/footer.css">
-    <link rel="stylesheet" href="../../style/content.css">
-    <link rel="stylesheet" href="../../style/about.css">
+    <link rel="stylesheet" href="../style/header.css">
+    <link rel="stylesheet" href="../style/mainstyle.css">
+    <link rel="stylesheet" href="../style/Featured-blog.css">
+    <link rel="stylesheet" href="../style/latest-blog.css">
+    <link rel="stylesheet" href="../style/footer.css">
+    <link rel="stylesheet" href="../style/content.css">
+    <link rel="stylesheet" href="../style/about.css">
     
 
 
