--- a/about/index.html
+++ b/about/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog by Muhammad Abid</title>
 
-    <link rel="icon" href="../../img/logo.png" type="">
+    <link rel="icon" href="../img/logo.png" type="">
 
     <link rel="stylesheet" href="../style/header.css">
     <link rel="stylesheet" href="../style/mainstyle.css">
@@ -32,7 +32,7 @@
     <!-- HEADER START -->
     <div class="header section">
         <nav>
-            <a href="https://muhammadabidd.github.io/blog/" class="main-logo"><img src="../../img/logo.png" alt="" class="logo"></a>
+            <a href="https://muhammadabidd.github.io/blog/" class="main-logo"><img src="../img/logo.png" alt="" class="logo"></a>
             <ul>
                 <li><a class="heading-list" href="https://muhammadabidd.github.io/blog/">Blog</a></li>
                 <!-- <li><a class="heading-list" href="#">Book</a></li>
@@ -40,8 +40,8 @@
                 <li><a class="heading-list" href="#">About</a></li>
             </ul>
             <div class="social-media-header">
-                <!-- <a href="#" target="_blank" class="social-media-header"><img class = "social-media-image-link" src='../../img/github.svg' alt=""></a> -->
-                <a href="https://www.linkedin.com/in/muhammmadabidd/" target="_blank" class="social-media-header"><img class = "social-media-image-link" src='../../img/linkedin.svg' alt=""></a>
+                <!-- <a href="#" target="_blank" class="social-media-header"><img class = "social-media-image-link" src='../img/github.svg' alt=""></a> -->
+                <a href="https://www.linkedin.com/in/muhammmadabidd/" target="_blank" class="social-media-header"><img class = "social-media-image-link" src='../img/linkedin.svg' alt=""></a>
             </div>
         </nav>
 
@@ -58,7 +58,7 @@
         <div class="about-container">
             <h1 class="content-title">About Me</h1>
             <p class="paragraph">Hi I'm Abid. Graduated as math teacher and also have interest in data science. I write anything that I like.</p>
-            <button class="get-to-know-btn"><a href="https://github.com/muhammadabidd" target="_blank" class="get-to-know-link">Get to Know</a></button>
+            <button class="get-to-know-btn"><a href="https://muhammadabidd.github.io/portfolio" target="_blank" class="get-to-know-link">Get to Know</a></button>
         </div>
 
         <img class="potrait" src="../img/Me.png" alt="">
@@ -87,11 +87,11 @@
         <a href="https://muhammadabidd.github.io/blog/" class="main-logo"><img src="img/logo.png" alt="" class="logo"></a>
         
         <div class="social-media-footer social-media">
-            <a href="https://api.whatsapp.com/send/?phone=6281273568772&text&type=phone_number&app_absent=0" target="_blank" class="image-footer"><img class="image-footer image-footer-01" src="../../img/email-footer.svg" alt=""></a>
-            <a href="https://github.com/muhammadabidd" target="_blank" class="image-footer"><img class="image-footer image-footer-02" src="../../img/github-footer.svg" alt=""></a>
-            <a href="https://muhammadabidd.medium.com" target="_blank" class="image-footer"><img class="image-footer image-footer-03" src="../../img/medium-footer.svg" alt=""></a>
-            <a href="https://linkedin.com/in/muhammmadabidd/" target="_blank" class="image-footer"><img class="image-footer image-footer-04" src="../../img/linkedin-footer.svg" alt=""></a>
-            <a href="https://twitter.com/muhammmadabidd" target="_blank" class="image-footer"><img class="image-footer image-footer-05" src="../../img/twitter-footer.svg" alt=""></a>
+            <a href="https://api.whatsapp.com/send/?phone=6281273568772&text&type=phone_number&app_absent=0" target="_blank" class="image-footer"><img class="image-footer image-footer-01" src="../img/email-footer.svg" alt=""></a>
+            <a href="https://github.com/muhammadabidd" target="_blank" class="image-footer"><img class="image-footer image-footer-02" src="../img/github-footer.svg" alt=""></a>
+            <a href="https://muhammadabidd.medium.com" target="_blank" class="image-footer"><img class="image-footer image-footer-03" src="../img/medium-footer.svg" alt=""></a>
+            <a href="https://linkedin.com/in/muhammmadabidd/" target="_blank" class="image-footer"><img class="image-footer image-footer-04" src="../img/linkedin-footer.svg" alt=""></a>
+            <a href="https://twitter.com/muhammmadabidd" target="_blank" class="image-footer"><img class="image-footer image-footer-05" src="../img/twitter-footer.svg" alt=""></a>
         </div>
         <p class="footer-text">Muhammad Abid <span class="blue">@2022</span></p>
     </div>
